@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.45 (gritter) 4/14/06";
+	"@(#)/usr/ucb/otfdump.sl	6.46 (gritter) 4/15/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.45 (gritter) 4/14/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.45 (gritter) 4/14/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.46 (gritter) 4/15/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.46 (gritter) 4/15/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.45 (gritter) 4/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.46 (gritter) 4/15/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.45 (gritter) 4/14/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.46 (gritter) 4/15/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.45";
+const char revision[] = "6.46";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -24,7 +24,7 @@ ext.h: * Sccsid @(#)ext.h	1.39 (gritter) 4/3/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.69 (gritter) 4/14/06
+n1.c: * Sccsid @(#)n1.c	1.70 (gritter) 4/15/06
 n2.c: * Sccsid @(#)n2.c	1.17 (gritter) 4/3/06
 n3.c: * Sccsid @(#)n3.c	1.79 (gritter) 4/14/06
 n4.c: * Sccsid @(#)n4.c	1.25 (gritter) 3/21/06
